@@ -1,5 +1,8 @@
 2012-03-29  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/52759
+	* g++.dg/ext/weak4.C: New test.
+
 	PR tree-optimization/52760
 	* gcc.c-torture/execute/pr52760.c: New test.
 
