@@ -1,3 +1,9 @@
+2012-03-29  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/52759
+	* decl.c (start_decl): Don't call maybe_apply_pragma_weak
+	if processing_template_decl.
+
 2012-03-29  Jason Merrill  <jason@redhat.com>
 
 	PR c++/52743
